разметка страницы. исправления
catalog.html:
5. исправила наименование
27. header заменила на h1
28-31. исправила хлебные крошки
36. иправила span на h2
44. закрыла li
119. исправила опечатку в academy

index.html:
40. убрала strong

выравнила код

--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-  	<header class="main-header">
-  		<nav class="main-navigation">
-  			<a class="main-header-logo">
-  			<img src="img" width="100" height="100" alt="Логотип Глейси">
-  		    </a>
-   			<ul class="site-navigation">
-  				<li><a href="сatalog.html">Каталог</a></li>
-  				<li><a href="delivery">Доставка и оплата</a></li>
-  				<li><a href="about-us">О компании</a></li>
-  			</ul>
-  			<ul class="user-navigation">
-  				<li><a href="button">Поиск</a></li>
-  				<li><a href="button">Вход</a></li>
-  				<li><a href="button">Корзинa</a></li>
-  			</ul>
-  		</nav>
-  	</header>
-  	<main class="container">
-  		<section class="lead-header">
-  			<h1 class="h1-visible">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h1>
-  				<ul class="excellence-lead">
-  					<li>Все наше мороженое изготавливается на собственном<br> производстве, с использованием современного оборудования<br> и проверенных временем технологий.</li>
-  				    <li>Для приготовления мороженого используются настоящие<br> сливки и молоко высочайшего качества. Все дополнительные<br> ингредиенты и добавки произведены из натурального,<br> экологически чистого сырья.</li>
-  				    <li>Закупка ингредиентов  производится только у проверенных<br> фермерских хозяйств и компаний, с которыми нас связывает<br> долговременное сотрудничество.</li>
-  				    <li>Доставка нашего мороженого до заказчиков осуществляется<br> в специальном термопаке, который не дает мороженому<br> растаять в пути и позволяет сохранить превосходный вкус.</li>
-  				</ul>
-  		</section>
-  		<section class="news-and-mail">
-  			<h1 class="visually-hidden">доп.разделы</h1>
-  			<article class="news">
-  				<h2 class="visually-hidden">блог</h2>
-  				<p>Новое в нашем блоге</p>
-  				<p><strong><a href="blog.html">10 способов сервировки<br> фруктовых щербетов к столу</a></strong></p>
-  			</article>
-  			<article class="mail">
-  				<h2 class="visually-hidden">рассылка</h2>
-  				<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-  				<a class="button" href="mail.html">Отправить</a>
-  			</article>
-  		</section>
-  	</main>
-	<footer class="main-footer">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img" width="100" height="100" alt="Логотип Глейси">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="сatalog.html">Каталог</a></li>
+          <li><a href="delivery">Доставка и оплата</a></li>
+          <li><a href="about-us">О компании</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li><a href="button">Поиск</a></li>
+          <li><a href="button">Вход</a></li>
+          <li><a href="button">Корзинa</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="lead-header">
+        <h1 class="h1-visible">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h1>
+        <ul class="excellence-lead">
+          <li>Все наше мороженое изготавливается на собственном<br> производстве, с использованием современного оборудования<br> и проверенных временем технологий.</li>
+          <li>Для приготовления мороженого используются настоящие<br> сливки и молоко высочайшего качества. Все дополнительные<br> ингредиенты и добавки произведены из натурального,<br> экологически чистого сырья.</li>
+          <li>Закупка ингредиентов  производится только у проверенных<br> фермерских хозяйств и компаний, с которыми нас связывает<br> долговременное сотрудничество.</li>
+          <li>Доставка нашего мороженого до заказчиков осуществляется<br> в специальном термопаке, который не дает мороженому<br> растаять в пути и позволяет сохранить превосходный вкус.</li>
+        </ul>
+      </section>
+      <section class="news-and-mail">
+        <h1 class="visually-hidden">доп.разделы</h1>
+        <article class="news">
+          <h2 class="visually-hidden">блог</h2>
+          <p>Новое в нашем блоге</p>
+          <p><a href="blog.html">10 способов сервировки<br> фруктовых щербетов к столу</a></p>
+        </article>
+        <article class="mail">
+          <h2 class="visually-hidden">рассылка</h2>
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <a class="button" href="mail.html">Отправить</a>
+        </article>
+      </section>
+    </main>
+    <footer class="main-footer">
       <div class="footer-social">
         <ul>
           <li><a class="social-button" href="#">Tvitter</a></li>
@@ -56,17 +56,17 @@
         </ul>
       </div>
       <div class="footer-info">
-      	<ul>
-      		<li><a class="info" href="#">Для поставщиков</a></li>
-      		<li><a class="info" href="#">О производстве</a></li>
-      		<li><a class="info" href="#">Наши документы</a></li>
-      		<li><a class="info" href="#">Экологические стандарты</a></li>
-      	</ul>
+        <ul>
+          <li><a class="info" href="#">Для поставщиков</a></li>
+          <li><a class="info" href="#">О производстве</a></li>
+          <li><a class="info" href="#">Наши документы</a></li>
+          <li><a class="info" href="#">Экологические стандарты</a></li>
+        </ul>
       </div>
       <div class="footer-copyright">
-        <p>Сделано в HTML Akademy</p> 
+        <p>Сделано в HTML Academy</p>
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
       </div>
-    </footer>  
+    </footer>
   </body>
 </html>
