--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>catalog_title</title>
+    <title>gllacy_catalog</title>
   </head>
   <body>
     <header class="main-header">
@@ -27,20 +27,21 @@
     </header>
     <main class="container">
       <section class="main-menu">
-      <header class="visually-hidden">Текущая</header>
-      <div class="breadcrumbs">
-        <a href="#">Главная</a>
-        <a class="active" href="#">Каталог</a>
-        <a>Сливочное</a>
-      </div>
-      <span class="main-list">Сливочное мороженое</span>
-    </section>
-    <div class="catalog">
-      <ul class="catalog-creamy">
-        <li>
-          <img src="price-310.png" alt="фото мороженки">
-          <h2>310 P/кг</h2>
-          <p>Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
+        <h1 class="visually-hidden">Текущая страница</h1>
+        <ul class="breadcrumbs">
+          <li><a href="#">Главная</a></li>
+          <li><a class="active" href="#">Каталог</a></li>
+          <li><a>Сливочное</a></li>
+        </ul>
+        <h2 class="main-list">Сливочное мороженое</h2>
+      </section>
+      <div class="catalog">
+        <ul class="catalog-creamy">
+          <li>
+            <img src="price-310.png" alt="фото мороженки">
+            <h2>310 P/кг</h2>
+            <p>Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
+          </li>
           <li>
             <img src="price-325.png" alt="фото мороженки">
             <h2>325 P/кг</h2>
@@ -116,7 +117,7 @@
         </ul>
       </div>
       <div class="footer-copyright">
-        <p>Сделано в HTML Akademy</p>
+        <p>Сделано в HTML Academy</p>
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
       </div>
     </footer>
