работа с графикой, исправления по разметке
графика:
подключила контентные изображения, скачала фоновые(png) и декоративные.

разметка:
исправила замечания от 22.11

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Магазин вкусного мороженого Глейси</title>
   </head>
   <body>
     <header class="main-header">
@@ -23,24 +23,27 @@
       </nav>
     </header>
     <main class="container">
-      <section class="lead-header">
-        <h1 class="h1-visible">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h1>
+      <h1 class="visually-hidden">главная страница</h1>
+      <section class="advantages">
+        <h2 class="visually-hidden">преимущества</h2>
+        <span class="specification shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</span>
         <ul class="excellence-lead">
-          <li>Все наше мороженое изготавливается на собственном<br> производстве, с использованием современного оборудования<br> и проверенных временем технологий.</li>
-          <li>Для приготовления мороженого используются настоящие<br> сливки и молоко высочайшего качества. Все дополнительные<br> ингредиенты и добавки произведены из натурального,<br> экологически чистого сырья.</li>
-          <li>Закупка ингредиентов  производится только у проверенных<br> фермерских хозяйств и компаний, с которыми нас связывает<br> долговременное сотрудничество.</li>
-          <li>Доставка нашего мороженого до заказчиков осуществляется<br> в специальном термопаке, который не дает мороженому<br> растаять в пути и позволяет сохранить превосходный вкус.</li>
+          <li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+          <li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+          <li>Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
+          <li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
         </ul>
       </section>
       <section class="news-and-mail">
-        <h1 class="visually-hidden">доп.разделы</h1>
-        <article class="news">
-          <h2 class="visually-hidden">блог</h2>
+        <h2 class="visually-hidden">новости и рассылка</h2>
+        <article class="news"><img src="img/strawberry_background.jpg" alt="клубничный фон">
+          <h3 class="visually-hidden">блог</h3>
           <p>Новое в нашем блоге</p>
-          <p><a href="blog.html">10 способов сервировки<br> фруктовых щербетов к столу</a></p>
+          <p><a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a></p>
+          
         </article>
         <article class="mail">
-          <h2 class="visually-hidden">рассылка</h2>
+          <h3 class="visually-hidden">рассылка</h3>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <a class="button" href="mail.html">Отправить</a>
         </article>
