--- a/catalog.html
+++ b/catalog.html
@@ -2,13 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>gllacy_catalog</title>
+    <title>Глейси: каталог</title>
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img" width="100" height="100" alt="Логотип Глейси">
+          <img src="img/logo.svg" width="100" height="100" alt="Логотип Глейси">
         </a>
         <ul class="site-navigation">
           <li><a href="сatalog.html">Каталог</a></li>
@@ -25,92 +25,119 @@
         <p>c 10 до 20, ежедневно<br> 8 812 450-25-25</p>
       </div>
     </header>
-    <main class="container">
-      <section class="main-menu">
-        <h1 class="visually-hidden">Текущая страница</h1>
+    <main class="catalog-page">
+      <h1 class="visually-hidden">Страница каталога</h1>
+      <section class="navigation-top">
+        <h2 class="visually-hidden">Навигация</h2>
         <ul class="breadcrumbs">
           <li><a href="#">Главная</a></li>
           <li><a class="active" href="#">Каталог</a></li>
           <li><a>Сливочное</a></li>
         </ul>
-        <h2 class="main-list">Сливочное мороженое</h2>
+        <span class="icecream-category">Сливочное мороженое</span>
       </section>
-      <div class="catalog">
-        <ul class="catalog-creamy">
+      <section class="item-cards">
+        <h2 class="visually-hidden">Карточки товаров</h2>
+        <ul class="item-cards-table">
           <li>
-            <img src="price-310.png" alt="фото мороженки">
-            <h2>310 P/кг</h2>
-            <p>Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
+            <div class="icecream-card">
+              <img src="img/price-310.jpg" alt="фото мороженки">
+              <span class="card-price">310 P/кг</span>
+              <span class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</span>
+            </div>
           </li>
           <li>
-            <img src="price-325.png" alt="фото мороженки">
-            <h2>325 P/кг</h2>
-            <p>Сливочное c брусничным джемом</p>
+            <div class="icecream-card">
+              <img src="img/price-325.jpg" alt="фото мороженки">
+              <span class="card-price">325 P/кг</span>
+              <span class="card-name">Сливочное c брусничным джемом</span>
+            </div>
           </li>
           <li>
-            <img src="price-440.png" alt="фото мороженки">
-            <h2>440 P/кг</h2>
-            <p>Сливочно-ванильное с кусочками шоколада</p>
+            <div class="icecream-card">
+              <img src="img/price-440.jpg" alt="фото мороженки">
+              <span class="card-price">440 P/кг</span>
+              <span class="card-name">Сливочно-ванильное с кусочками шоколада</span>
+            </div>
           </li>
           <li>
-            <img src="price-380.png" alt="фото мороженки">
-            <h2>380 P/кг</h2>
-            <p>Сливочно-кофейное с кусочками шоколада</p>
+            <div class="icecream-card">
+              <img src="img/price-380.jpg" alt="фото мороженки">
+              <span class="card-price">380 P/кг</span>
+              <span class="card-name">Сливочно-кофейное с кусочками шоколада</span>
+            </div>
           </li>
           <li>
-            <img src="price-410.png" alt="фото мороженки">
-            <h2>410 P/кг</h2>
-            <p>Сливочно-черничное с чельным ягодами черники</p>
+            <div class="icecream-card">
+              <img src="img/price-410.jpg" alt="фото мороженки">
+              <span class="card-price">410 P/кг</span>
+              <span class="card-name">Сливочно-черничное с чельным ягодами черники</span>
+            </div>
           </li>
           <li>
-            <img src="price-435.png" alt="фото мороженки">
-            <h2>435 P/кг</h2>
-            <p>Сливочное с ментоловым сиропом</p>
+            <div class="icecream-card">
+              <img src="img/price-435.jpg" alt="фото мороженки">
+              <span class="card-price">435 P/кг</span>
+              <span class="card-name">Сливочное с ментоловым сиропом</span>
+            </div>
           </li>
           <li>
-            <img src="price-355.png" alt="фото мороженки">
-            <h2>355 P/кг</h2>
-            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+            <div class="icecream-card">
+              <img src="img/price-355-1.jpg" alt="фото мороженки">
+              <span class="card-price">355 P/кг</span>
+              <span class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
+            </div>
           </li>
           <li>
-            <img src="price-375.png" alt="фото мороженки">
-            <h2>375 P/кг</h2>
-            <p>Сливочно-лимонное с карамельной присыпкой</p>
+            <div class="icecream-card">
+              <img src="img/price-375.jpg" alt="фото мороженки">
+              <span class="card-price">375 P/кг</span>
+              <span class="card-name">Сливочно-лимонное с карамельной присыпкой</span>
+            </div>
           </li>
           <li>
-            <img src="price-355black.png" alt="фото мороженки">
-            <h2>355 P/кг</h2>
-            <p>Сливочное с кусочками черного шоколада</p>
+            <div class="icecream-card">
+              <img src="img/price-355-2.jpg" alt="фото мороженки">
+              <span class="card-price">355 P/кг</span>
+              <span class="card-name">Сливочное с кусочками черного шоколада</span>
+            </div>
           </li>
           <li>
-            <img src="price-415.png" alt="фото мороженки">
-            <h2>415 P/кг</h2>
-            <p>Сливочное крем-брюле с карамельной подливкой</p>
+            <div class="icecream-card">
+              <img src="img/price-415.jpg" alt="фото мороженки">
+              <span class="card-price">415 P/кг</span>
+              <span class="card-name">Сливочное крем-брюле с карамельной подливкой</span>
+            </div>
           </li>
           <li>
-            <img src="price-320.png" alt="фото мороженки">
-            <h2>320 P/кг</h2>
-            <p>Сливочное с шоколадной стружкой</p>
+            <div class="icecream-card">
+              <img src="img/price-320.jpg" alt="фото мороженки">
+              <span class="card-price">320 P/кг</span>
+              <span class="card-name">Сливочное с шоколадной стружкой</span>
+            </div>
           </li>
-          <li><img src="price-420.png" alt="фото мороженки">
-            <h2>420 P/кг</h2>
-            <p>Сливочное с мятным сиропом</p>
+          <li>
+            <div class="icecream-card">
+              <img src="img/price-420.jpg" alt="фото мороженки">
+              <span class="card-price">420 P/кг</span>
+              <span class="card-name">Сливочное с мятным сиропом</span>
+            </div>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer class="main-footer">
       <div class="footer-social">
         <ul>
-          <li><a class="social-button" href="#">Tvitter</a></li>
-          <li><a class="social-button" href="#">Instagram</a></li>
-          <li><a class="social-button" href="#">Facebook</a></li>
-          <li><a class="social-button" href="#">Vkontakte</a></li>
+          <li><a class="social-button" href="#"><img src="img/twitter.svg">Twitter</a></li>
+          <li><a class="social-button" href="#"><img src="img/instagram.svg">Instagram</a></li>
+          <li><a class="social-button" href="#"><img src="img/fb.svg">Facebook</a></li>
+          <li><a class="social-button" href="#"><img src="img/vk.svg">Vkontakte</a></li>
         </ul>
       </div>
       <div class="footer-info">
         <ul>
-          <li><a class="info" href="#">Для поставщиков</a></li>
+          <li><a class="info" href="#"><img src="img/heart.svg">Для поставщиков</a></li>
           <li><a class="info" href="#">О производстве</a></li>
           <li><a class="info" href="#">Наши документы</a></li>
           <li><a class="info" href="#">Экологические стандарты</a></li>
