--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,6 @@
       </div>
     </header>
     <main class="catalog-page">
-      <h1 class="visually-hidden">Страница каталога</h1>
       <section class="navigation-top">
         <h2 class="visually-hidden">Навигация</h2>
         <ul class="breadcrumbs">
@@ -34,93 +33,93 @@
           <li><a class="active" href="#">Каталог</a></li>
           <li><a>Сливочное</a></li>
         </ul>
-        <span class="icecream-category">Сливочное мороженое</span>
+        <h1 class="icecream-category">Сливочное мороженое</h1>
       </section>
       <section class="item-cards">
         <h2 class="visually-hidden">Карточки товаров</h2>
         <ul class="item-cards-table">
           <li>
             <div class="icecream-card">
-              <img src="img/price-310.jpg" alt="фото мороженки">
-              <span class="card-price">310 P/кг</span>
-              <span class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</span>
+              <img src="img/icecream-orange.jpg" alt="фото мороженки">
+              <p class="card-price">310 P/кг</p>
+              <p class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-325.jpg" alt="фото мороженки">
-              <span class="card-price">325 P/кг</span>
-              <span class="card-name">Сливочное c брусничным джемом</span>
+              <img src="img/icecream-cowberry.jpg" alt="фото мороженки">
+              <p class="card-price">325 P/кг</p>
+              <p class="card-name">Сливочное c брусничным джемом</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-440.jpg" alt="фото мороженки">
-              <span class="card-price">440 P/кг</span>
-              <span class="card-name">Сливочно-ванильное с кусочками шоколада</span>
+              <img src="img/icecream-vanilla.jpg" alt="фото мороженки">
+              <p class="card-price">440 P/кг</p>
+              <p class="card-name">Сливочно-ванильное с кусочками шоколада</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-380.jpg" alt="фото мороженки">
-              <span class="card-price">380 P/кг</span>
-              <span class="card-name">Сливочно-кофейное с кусочками шоколада</span>
+              <img src="img/icecream-coffee.jpg" alt="фото мороженки">
+              <p class="card-price">380 P/кг</p>
+              <p class="card-name">Сливочно-кофейное с кусочками шоколада</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-410.jpg" alt="фото мороженки">
-              <span class="card-price">410 P/кг</span>
-              <span class="card-name">Сливочно-черничное с чельным ягодами черники</span>
+              <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
+              <p class="card-price">410 P/кг</p>
+              <p class="card-name">Сливочно-черничное с цельным ягодами черники</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-435.jpg" alt="фото мороженки">
-              <span class="card-price">435 P/кг</span>
-              <span class="card-name">Сливочное с ментоловым сиропом</span>
+              <img src="img/icecream-menthol.jpg" alt="фото мороженки">
+              <p class="card-price">435 P/кг</p>
+              <p class="card-name">Сливочное с ментоловым сиропом</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-355-1.jpg" alt="фото мороженки">
-              <span class="card-price">355 P/кг</span>
-              <span class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
+              <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
+              <p class="card-price">355 P/кг</p>
+              <p class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-375.jpg" alt="фото мороженки">
-              <span class="card-price">375 P/кг</span>
-              <span class="card-name">Сливочно-лимонное с карамельной присыпкой</span>
+              <img src="img/icecream-lemon.jpg" alt="фото мороженки">
+              <p class="card-price">375 P/кг</p>
+              <p class="card-name">Сливочно-лимонное с карамельной присыпкой</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-355-2.jpg" alt="фото мороженки">
-              <span class="card-price">355 P/кг</span>
-              <span class="card-name">Сливочное с кусочками черного шоколада</span>
+              <img src="img/icecream-piece-black-chocolate.jpg" alt="фото мороженки">
+              <p class="card-price">355 P/кг</p>
+              <p class="card-name">Сливочное с кусочками черного шоколада</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-415.jpg" alt="фото мороженки">
-              <span class="card-price">415 P/кг</span>
-              <span class="card-name">Сливочное крем-брюле с карамельной подливкой</span>
+              <img src="img/icecream-Creme-brulee.jpg" alt="фото мороженки">
+              <p class="card-price">415 P/кг</p>
+              <p class="card-name">Сливочное крем-брюле с карамельной подливкой</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-320.jpg" alt="фото мороженки">
-              <span class="card-price">320 P/кг</span>
-              <span class="card-name">Сливочное с шоколадной стружкой</span>
+              <img src="img/icecream-chocolate-chips.jpg" alt="фото мороженки">
+              <p class="card-price">320 P/кг</p>
+              <p class="card-name">Сливочное с шоколадной стружкой</p>
             </div>
           </li>
           <li>
             <div class="icecream-card">
-              <img src="img/price-420.jpg" alt="фото мороженки">
-              <span class="card-price">420 P/кг</span>
-              <span class="card-name">Сливочное с мятным сиропом</span>
+              <img src="img/icecream-mint.jpg" alt="фото мороженки">
+              <p class="card-price">420 P/кг</p>
+              <p class="card-name">Сливочное с мятным сиропом</p>
             </div>
           </li>
         </ul>
