--- a/catalog.html
+++ b/catalog.html
@@ -18,134 +18,152 @@
         <ul class="user-navigation">
           <li><a href="button">Поиск</a></li>
           <li><a href="button">Вход</a></li>
-          <li><a href="button">Корзинa</a></li>
-        </ul>
-      </nav>
-      <div class="time-work">
-        <p>c 10 до 20, ежедневно<br> 8 812 450-25-25</p>
-      </div>
-    </header>
-    <main class="catalog-page">
-      <section class="navigation-top">
-        <h2 class="visually-hidden">Навигация</h2>
-        <ul class="breadcrumbs">
-          <li><a href="#">Главная</a></li>
-          <li><a class="active" href="#">Каталог</a></li>
-          <li><a>Сливочное</a></li>
-        </ul>
-        <h1 class="icecream-category">Сливочное мороженое</h1>
-      </section>
-      <section class="item-cards">
-        <h2 class="visually-hidden">Карточки товаров</h2>
-        <ul class="item-cards-table">
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-orange.jpg" alt="фото мороженки">
-              <p class="card-price">310 P/кг</p>
-              <p class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-cowberry.jpg" alt="фото мороженки">
-              <p class="card-price">325 P/кг</p>
-              <p class="card-name">Сливочное c брусничным джемом</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-vanilla.jpg" alt="фото мороженки">
-              <p class="card-price">440 P/кг</p>
-              <p class="card-name">Сливочно-ванильное с кусочками шоколада</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-coffee.jpg" alt="фото мороженки">
-              <p class="card-price">380 P/кг</p>
-              <p class="card-name">Сливочно-кофейное с кусочками шоколада</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
-              <p class="card-price">410 P/кг</p>
-              <p class="card-name">Сливочно-черничное с цельным ягодами черники</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-menthol.jpg" alt="фото мороженки">
-              <p class="card-price">435 P/кг</p>
-              <p class="card-name">Сливочное с ментоловым сиропом</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
-              <p class="card-price">355 P/кг</p>
-              <p class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-lemon.jpg" alt="фото мороженки">
-              <p class="card-price">375 P/кг</p>
-              <p class="card-name">Сливочно-лимонное с карамельной присыпкой</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-piece-black-chocolate.jpg" alt="фото мороженки">
-              <p class="card-price">355 P/кг</p>
-              <p class="card-name">Сливочное с кусочками черного шоколада</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-Creme-brulee.jpg" alt="фото мороженки">
-              <p class="card-price">415 P/кг</p>
-              <p class="card-name">Сливочное крем-брюле с карамельной подливкой</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-chocolate-chips.jpg" alt="фото мороженки">
-              <p class="card-price">320 P/кг</p>
-              <p class="card-name">Сливочное с шоколадной стружкой</p>
-            </div>
-          </li>
-          <li>
-            <div class="icecream-card">
-              <img src="img/icecream-mint.jpg" alt="фото мороженки">
-              <p class="card-price">420 P/кг</p>
-              <p class="card-name">Сливочное с мятным сиропом</p>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="main-footer">
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#"><img src="img/twitter.svg">Twitter</a></li>
-          <li><a class="social-button" href="#"><img src="img/instagram.svg">Instagram</a></li>
-          <li><a class="social-button" href="#"><img src="img/fb.svg">Facebook</a></li>
-          <li><a class="social-button" href="#"><img src="img/vk.svg">Vkontakte</a></li>
-        </ul>
-      </div>
-      <div class="footer-info">
-        <ul>
-          <li><a class="info" href="#"><img src="img/heart.svg">Для поставщиков</a></li>
-          <li><a class="info" href="#">О производстве</a></li>
-          <li><a class="info" href="#">Наши документы</a></li>
-          <li><a class="info" href="#">Экологические стандарты</a></li>
-        </ul>
-      </div>
-      <div class="footer-copyright">
-        <p>Сделано в HTML Academy</p>
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </div>
-    </footer>
-  </body>
+          <li><a href="button">Корзинa</a>
+          <form style="width:350px; box-shadow: 0 0 10px #cccccc" class="basket-form" method="get" action="https:_.ru">
+            <table border="1">
+              <tr>
+                <td> <input type="checkbox" name="basket" id="basket-order"></td>
+                <td>Пломбир с апельсиновым джемом</td>
+                <td>1.5 кг</td>
+                <td>300 р.</td>
+              </tr>
+              <tr>
+                <td> <input type="checkbox" name="basket" id="basket-order"></td>
+                <td>Клубничный пломбир с присыпкой из белого шоколада</td>
+                <td>1.5 кг</td>
+                <td>450 р.</td>
+              </tr>
+            </table>
+            <button type="submit">Оформить заказ</button>
+          </form>
+        </li>
+      </ul>
+    </nav>
+    <div class="time-work">
+      <p>c 10 до 20, ежедневно 8 812 450-25-25</p>
+    </div>
+  </header>
+  <main class="catalog-page">
+    <section class="navigation-top">
+      <h2 class="visually-hidden">Навигация</h2>
+      <ul class="breadcrumbs">
+        <li><a href="#">Главная</a></li>
+        <li><a class="active" href="#">Каталог</a></li>
+        <li><a>Сливочное</a></li>
+      </ul>
+      <h1 class="icecream-category">Сливочное мороженое</h1>
+    </section>
+    <section class="item-cards">
+      <h2 class="visually-hidden">Карточки товаров</h2>
+      <ul class="item-cards-table">
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-orange.jpg" alt="фото мороженки">
+            <p class="card-price">310 P/кг</p>
+            <p class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-cowberry.jpg" alt="фото мороженки">
+            <p class="card-price">325 P/кг</p>
+            <p class="card-name">Сливочное c брусничным джемом</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-vanilla.jpg" alt="фото мороженки">
+            <p class="card-price">440 P/кг</p>
+            <p class="card-name">Сливочно-ванильное с кусочками шоколада</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-coffee.jpg" alt="фото мороженки">
+            <p class="card-price">380 P/кг</p>
+            <p class="card-name">Сливочно-кофейное с кусочками шоколада</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
+            <p class="card-price">410 P/кг</p>
+            <p class="card-name">Сливочно-черничное с цельным ягодами черники</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-menthol.jpg" alt="фото мороженки">
+            <p class="card-price">435 P/кг</p>
+            <p class="card-name">Сливочное с ментоловым сиропом</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
+            <p class="card-price">355 P/кг</p>
+            <p class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-lemon.jpg" alt="фото мороженки">
+            <p class="card-price">375 P/кг</p>
+            <p class="card-name">Сливочно-лимонное с карамельной присыпкой</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-piece-black-chocolate.jpg" alt="фото мороженки">
+            <p class="card-price">355 P/кг</p>
+            <p class="card-name">Сливочное с кусочками черного шоколада</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-Creme-brulee.jpg" alt="фото мороженки">
+            <p class="card-price">415 P/кг</p>
+            <p class="card-name">Сливочное крем-брюле с карамельной подливкой</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-chocolate-chips.jpg" alt="фото мороженки">
+            <p class="card-price">320 P/кг</p>
+            <p class="card-name">Сливочное с шоколадной стружкой</p>
+          </div>
+        </li>
+        <li>
+          <div class="icecream-card">
+            <img src="img/icecream-mint.jpg" alt="фото мороженки">
+            <p class="card-price">420 P/кг</p>
+            <p class="card-name">Сливочное с мятным сиропом</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="footer-social">
+      <ul>
+        <li><a class="social-button" href="#"><img src="img/twitter.svg">Twitter</a></li>
+        <li><a class="social-button" href="#"><img src="img/instagram.svg">Instagram</a></li>
+        <li><a class="social-button" href="#"><img src="img/fb.svg">Facebook</a></li>
+        <li><a class="social-button" href="#"><img src="img/vk.svg">Vkontakte</a></li>
+      </ul>
+    </div>
+    <div class="footer-info">
+      <ul>
+        <li><a class="info" href="#"><img src="img/heart.svg">Для поставщиков</a></li>
+        <li><a class="info" href="#">О производстве</a></li>
+        <li><a class="info" href="#">Наши документы</a></li>
+        <li><a class="info" href="#">Экологические стандарты</a></li>
+      </ul>
+    </div>
+    <div class="footer-copyright">
+      <p>Сделано в HTML Academy</p>
+      <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+    </div>
+  </footer>
+</body>
 </html>
