--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 <div class="container">
 <footer class="main-footer">
 <div class="footer-social">
-  <div><a class="social-button" href="#"><img src="img/twitter.svg"></a></div>
-  <div><a class="social-button" href="#"><img src="img/instagram.svg"></a></div>
-  <div><a class="social-button" href="#"><img src="img/fb.svg"></a></div>
-  <div><a class="social-button" href="#"><img src="img/vk.svg"></a></div>
+  <div><a class="social-button" id="twitter" href="#"></a></div>
+  <div><a class="social-button" id="instagram" href="#"></a></div>
+  <div><a class="social-button" id="fb" href="#"></a></div>
+  <div><a class="social-button" id="vk" href="#"></a></div>
 </div>
 <div class="footer-info">
   <ul class="flex-conteiner-footer-info">
