--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </li>
           </ul>
           <div class="time-tel">
-            <p class="time">с 10 до 20, ежедневно</p>
+            <p class="time">С 10 до 20, ежедневно</p>
             <a class="telephone" href="tel:88124502525">8 812 450-25-25</a>
           </div>
         </nav>
