--- a/index.html
+++ b/index.html
@@ -136,9 +136,7 @@
                 </div>
                 <p class="card-price">310 ₽/кг</p>
                 <a class="card-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                <div class="hover-product-wrap">
-                  <a class="button-preview">Быстрый просмотр</a>
-                </div>
+                <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
               </div>
               <div class="icecream-card">
                 <div class="img-wrap">
