--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       </form>
     </div>
     <div class="page-fade-overlay"></div>
-    <script src="js/script.js"></script>
+    <script src="js/script_minified.js"></script>
   </div>
 </body>
 
